--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,8 @@ on: [push]
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
-    name: Run Commands pwd, ls
-    run: |
-      pwd
-      ls
+    steps:
+      name: Run Commands pwd, ls
+      run: |
+        pwd
+        ls
