--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,7 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
-      - name: List files
-      - run: |
-          pwd
-          ls
+      - name: Multilines Script
+        run: |
+          node -v
+          npm -v
