--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,3 +10,7 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: List resources
+        run: |
+          pwd
+          ls
