--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,10 @@
 name: Shell Commands
 
-on: [pull_request]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   run-shell-command:
