--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
         "overtrue/phplint": "2.0"
     },
     "scripts": {
+        "lint": "phplint --no-cache src/",
         "phpcs": "phpcs --standard=PSR12 src/",
         "phpcbf": "phpcbf --standard=PSR12 src/"
     }
-    
+
 }
