--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "overtrue/phplint": "2.0"
     },
     "scripts": {
-        "lint": "phplint --no-cache src/",
+        "lint": "phplint src/",
         "phpcs": "phpcs --standard=PSR12 src/",
         "phpcbf": "phpcbf --standard=PSR12 src/"
     }
