--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -36,7 +36,7 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Add Permissions
-      run: echo $GITHUB_CONTEXT
+      run: echo ${{ github.repositry }}
 
     # - name: Run Linter
     #   run: composer lint
