--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Github vars
         run: |
           echo "Home: ${HOME}"
-          echo "GITHUB_WORKFLWO: ${GITHUB_WORKFLWO}"
-          echo "GITHUB_REPOSITRY: ${GITHUB_REPOSITRY}"
+          echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
+          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
