--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "overtrue/phplint": "2.0"
     },
     "scripts": {
-        "lint": "phplint --no-cache src/",
-        "phpcs": "phpcs --standard=PSR12 src/",
-        "phpcbf": "phpcbf --standard=PSR12 src/"
+        "lint": "phplint --no-cache ./src",
+        "phpcs": "phpcs --standard=PSR12 ./src",
+        "phpcbf": "phpcbf --standard=PSR12 ./src"
     }
 
 }
