--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -33,8 +33,8 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
-    - name: Run Linter
-      run: composer lint
+#     - name: Run Linter
+#       run: composer lint
 
     - name: Run CS
-      run: composer phpcs
+      run: phpcs--standard=PSR12 src/
